Update po files

--- a/po/af.po
+++ b/po/af.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2010-03-30 23:04+0200\n"
 "Last-Translator: Michal <michal@cihar.com>\n"
 "Language-Team: afrikaans <af@li.org>\n"
@@ -1168,7 +1168,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "Spasie verbruik"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 #| msgid "Space usage"
 msgid "Query cache usage"
@@ -11298,8 +11298,8 @@ msgid "Current amount of Questions: %s"
 msgstr ""
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
-msgid "% slow queries"
+#, fuzzy
+msgid "Percentage of slow queries"
 msgstr "SQL-stelling"
 
 #: po/advisory_rules.php:16
@@ -11320,7 +11320,7 @@ msgstr ""
 
 #: po/advisory_rules.php:20
 #, fuzzy
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "SQL-stelling"
 
 #: po/advisory_rules.php:21
@@ -11494,12 +11494,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "Spasie verbruik"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -11659,8 +11653,7 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, php-format
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -11681,7 +11674,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
+msgid "Rate of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:113
@@ -11714,7 +11707,7 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
+msgid "Rate of joins without indexes"
 msgstr ""
 
 #: po/advisory_rules.php:121
@@ -11733,7 +11726,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -11756,7 +11749,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -11778,7 +11771,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -11819,10 +11812,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table(s)"
-msgid "% temp disk tables"
-msgstr "%s tabel(le)"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -11849,8 +11840,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table(s)"
+msgid "Temp disk rate"
+msgstr "%s tabel(le)"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -11889,7 +11882,7 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
+msgid "Max % MyISAM key buffer ever used"
 msgstr ""
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
@@ -11910,7 +11903,7 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
+msgid "Percentage of MyISAM key buffer used"
 msgstr ""
 
 #: po/advisory_rules.php:168
@@ -11919,7 +11912,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -11938,7 +11931,7 @@ msgstr ""
 
 #: po/advisory_rules.php:175
 #, fuzzy
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "Skep 'n nuwe bladsy"
 
 #: po/advisory_rules.php:176
@@ -11957,9 +11950,9 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, fuzzy, php-format
-msgid "% open files"
-msgstr "Wys tabelle"
+#, fuzzy
+msgid "Percentage of used open files limit"
+msgstr "Karakterstel van die leer:"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -11981,7 +11974,7 @@ msgstr ""
 
 #: po/advisory_rules.php:185
 #, fuzzy
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "Karakterstel van die leer:"
 
 #: po/advisory_rules.php:186
@@ -12022,7 +12015,7 @@ msgid "Table lock wait rate: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:200
-msgid "thread cache"
+msgid "Thread cache"
 msgstr ""
 
 #: po/advisory_rules.php:201
@@ -12040,7 +12033,7 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
+msgid "Thread cache hit rate %"
 msgstr ""
 
 #: po/advisory_rules.php:206
@@ -12095,8 +12088,7 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, php-format
-msgid "% connections used"
+msgid "Percentage of used connections"
 msgstr ""
 
 #: po/advisory_rules.php:221
@@ -12119,8 +12111,9 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:225
-msgid "% aborted connections"
-msgstr ""
+#, fuzzy
+msgid "Percentage of aborted connections"
+msgstr "Tabel kommentaar"
 
 #: po/advisory_rules.php:226
 msgid "Too many connections are aborted."
@@ -12140,8 +12133,9 @@ msgid "%s%% of all connections are aborted. This value should be below 1%%"
 msgstr ""
 
 #: po/advisory_rules.php:230
-msgid "rate of aborted connections"
-msgstr ""
+#, fuzzy
+msgid "Rate of aborted connections"
+msgstr "Tabel kommentaar"
 
 #: po/advisory_rules.php:231
 msgid "Too many connections are aborted"
@@ -12154,8 +12148,9 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+msgid "Percentage of aborted clients"
+msgstr "Tabel kommentaar"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12175,7 +12170,7 @@ msgstr ""
 
 #: po/advisory_rules.php:240
 #, fuzzy
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "Tabel kommentaar"
 
 #: po/advisory_rules.php:243
@@ -12200,7 +12195,7 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
+msgid "InnoDB log size"
 msgstr ""
 
 #: po/advisory_rules.php:251
@@ -12306,6 +12301,15 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "Spasie verbruik"
+
+#, fuzzy
+#~ msgid "% open files"
+#~ msgstr "Wys tabelle"
 
 #, fuzzy
 #~| msgid "Usage"
