--- a/po/fa.po
+++ b/po/fa.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2010-05-19 03:54+0200\n"
 "Last-Translator: <ahmad_usa2007@yahoo.com>\n"
 "Language-Team: persian <fa@li.org>\n"
@@ -1149,7 +1149,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "پیگردی فعال نمی باشد."
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 #| msgid "Space usage"
 msgid "Query cache usage"
@@ -11264,8 +11264,8 @@ msgid "Current amount of Questions: %s"
 msgstr ""
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
-msgid "% slow queries"
+#, fuzzy
+msgid "Percentage of slow queries"
 msgstr "پرس و جوي SQL"
 
 #: po/advisory_rules.php:16
@@ -11286,7 +11286,7 @@ msgstr ""
 
 #: po/advisory_rules.php:20
 #, fuzzy
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "پرس و جوي SQL"
 
 #: po/advisory_rules.php:21
@@ -11461,12 +11461,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "فضاي استفاده‌شده"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -11627,8 +11621,7 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, php-format
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -11649,7 +11642,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
+msgid "Rate of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:113
@@ -11682,7 +11675,7 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
+msgid "Rate of joins without indexes"
 msgstr ""
 
 #: po/advisory_rules.php:121
@@ -11701,7 +11694,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -11724,7 +11717,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -11746,7 +11739,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -11787,11 +11780,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table"
-#| msgid_plural "%s tables"
-msgid "% temp disk tables"
-msgstr "%s جدول"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -11818,8 +11808,11 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table"
+#| msgid_plural "%s tables"
+msgid "Temp disk rate"
+msgstr "%s جدول"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -11858,7 +11851,7 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
+msgid "Max % MyISAM key buffer ever used"
 msgstr ""
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
@@ -11879,7 +11872,7 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
+msgid "Percentage of MyISAM key buffer used"
 msgstr ""
 
 #: po/advisory_rules.php:168
@@ -11888,7 +11881,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -11907,7 +11900,7 @@ msgstr ""
 
 #: po/advisory_rules.php:175
 #, fuzzy
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "ساخت يك صفحه جديد"
 
 #: po/advisory_rules.php:176
@@ -11926,9 +11919,9 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, fuzzy, php-format
-msgid "% open files"
-msgstr "نمايش جدولها"
+#, fuzzy
+msgid "Percentage of used open files limit"
+msgstr "مجموعه كاراكترهاي پرونده:"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -11950,7 +11943,7 @@ msgstr ""
 
 #: po/advisory_rules.php:185
 #, fuzzy
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "مجموعه كاراكترهاي پرونده:"
 
 #: po/advisory_rules.php:186
@@ -11991,7 +11984,7 @@ msgid "Table lock wait rate: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:200
-msgid "thread cache"
+msgid "Thread cache"
 msgstr ""
 
 #: po/advisory_rules.php:201
@@ -12009,8 +12002,10 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+#| msgid "Tracking is not active."
+msgid "Thread cache hit rate %"
+msgstr "پیگردی فعال نمی باشد."
 
 #: po/advisory_rules.php:206
 #, fuzzy
@@ -12066,8 +12061,7 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, php-format
-msgid "% connections used"
+msgid "Percentage of used connections"
 msgstr ""
 
 #: po/advisory_rules.php:221
@@ -12090,8 +12084,9 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:225
-msgid "% aborted connections"
-msgstr ""
+#, fuzzy
+msgid "Percentage of aborted connections"
+msgstr "توضيحات جدول"
 
 #: po/advisory_rules.php:226
 msgid "Too many connections are aborted."
@@ -12111,8 +12106,9 @@ msgid "%s%% of all connections are aborted. This value should be below 1%%"
 msgstr ""
 
 #: po/advisory_rules.php:230
-msgid "rate of aborted connections"
-msgstr ""
+#, fuzzy
+msgid "Rate of aborted connections"
+msgstr "توضيحات جدول"
 
 #: po/advisory_rules.php:231
 msgid "Too many connections are aborted"
@@ -12125,8 +12121,9 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+msgid "Percentage of aborted clients"
+msgstr "توضيحات جدول"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12146,7 +12143,7 @@ msgstr ""
 
 #: po/advisory_rules.php:240
 #, fuzzy
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "توضيحات جدول"
 
 #: po/advisory_rules.php:243
@@ -12171,7 +12168,7 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
+msgid "InnoDB log size"
 msgstr ""
 
 #: po/advisory_rules.php:251
@@ -12277,6 +12274,15 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "فضاي استفاده‌شده"
+
+#, fuzzy
+#~ msgid "% open files"
+#~ msgstr "نمايش جدولها"
 
 #, fuzzy
 #~| msgid "Usage"
