--- a/po/hr.po
+++ b/po/hr.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2010-07-21 14:54+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: croatian <hr@li.org>\n"
@@ -1205,7 +1205,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "Pohrana upita"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 #| msgid "Query cache"
 msgid "Query cache usage"
@@ -11894,8 +11894,8 @@ msgid "Current amount of Questions: %s"
 msgstr "najv. uzastopnih veza"
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
-msgid "% slow queries"
+#, fuzzy
+msgid "Percentage of slow queries"
 msgstr "Prikaži pune upite"
 
 #: po/advisory_rules.php:16
@@ -11917,7 +11917,7 @@ msgstr ""
 #: po/advisory_rules.php:20
 #, fuzzy
 #| msgid "Flush query cache"
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "Isprazni pohranu upita"
 
 #: po/advisory_rules.php:21
@@ -12098,12 +12098,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "Iskorištenost prostora"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -12270,9 +12264,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Allows creating temporary tables."
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr "Dopušta izradu privremenih tablica."
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -12295,8 +12289,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
-msgstr ""
+#, fuzzy
+#| msgid "Allows creating temporary tables."
+msgid "Rate of sorts that cause temporary tables"
+msgstr "Dopušta izradu privremenih tablica."
 
 #: po/advisory_rules.php:113
 #, php-format
@@ -12328,8 +12324,9 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
-msgstr ""
+#, fuzzy
+msgid "Rate of joins without indexes"
+msgstr "Provjeri tablicu"
 
 #: po/advisory_rules.php:121
 #, fuzzy
@@ -12348,7 +12345,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -12371,7 +12368,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -12393,7 +12390,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -12434,10 +12431,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table(s)"
-msgid "% temp disk tables"
-msgstr "%s tablica"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -12464,8 +12459,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table(s)"
+msgid "Temp disk rate"
+msgstr "%s tablica"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -12506,8 +12503,10 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Max % MyISAM key buffer ever used"
+msgstr "Veličina međuspremnika preslagivanja"
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
 #, php-format
@@ -12527,8 +12526,10 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Percentage of MyISAM key buffer used"
+msgstr "Veličina međuspremnika preslagivanja"
 
 #: po/advisory_rules.php:168
 #, php-format
@@ -12536,7 +12537,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -12556,7 +12557,7 @@ msgstr ""
 #: po/advisory_rules.php:175
 #, fuzzy
 #| msgid "Create table"
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "Izradi tablicu"
 
 #: po/advisory_rules.php:176
@@ -12577,10 +12578,10 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, fuzzy, php-format
-#| msgid "Show open tables"
-msgid "% open files"
-msgstr "Prikaži otvorene tablice"
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of used open files limit"
+msgstr "Oblikovanje uvezene datoteke"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -12603,7 +12604,7 @@ msgstr ""
 #: po/advisory_rules.php:185
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "Oblikovanje uvezene datoteke"
 
 #: po/advisory_rules.php:186
@@ -12650,7 +12651,7 @@ msgstr ""
 #: po/advisory_rules.php:200
 #, fuzzy
 #| msgid "Key cache"
-msgid "thread cache"
+msgid "Thread cache"
 msgstr "Pohrana ključeva"
 
 #: po/advisory_rules.php:201
@@ -12668,8 +12669,10 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+#| msgid "Key cache"
+msgid "Thread cache hit rate %"
+msgstr "Pohrana ključeva"
 
 #: po/advisory_rules.php:206
 msgid "Thread cache is not efficient."
@@ -12725,10 +12728,10 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
-#| msgid "Connections"
-msgid "% connections used"
-msgstr "Veze"
+#, fuzzy
+#| msgid "max. concurrent connections"
+msgid "Percentage of used connections"
+msgstr "najv. uzastopnih veza"
 
 #: po/advisory_rules.php:221
 msgid ""
@@ -12752,7 +12755,7 @@ msgstr ""
 #: po/advisory_rules.php:225
 #, fuzzy
 #| msgid "max. concurrent connections"
-msgid "% aborted connections"
+msgid "Percentage of aborted connections"
 msgstr "najv. uzastopnih veza"
 
 #: po/advisory_rules.php:226
@@ -12775,7 +12778,7 @@ msgstr ""
 #: po/advisory_rules.php:230
 #, fuzzy
 #| msgid "max. concurrent connections"
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr "najv. uzastopnih veza"
 
 #: po/advisory_rules.php:231
@@ -12789,8 +12792,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of aborted clients"
+msgstr "Oblikovanje uvezene datoteke"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12811,7 +12816,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "Oblikovanje uvezene datoteke"
 
 #: po/advisory_rules.php:243
@@ -12838,8 +12843,10 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
-msgstr ""
+#, fuzzy
+#| msgid "Buffer pool size"
+msgid "InnoDB log size"
+msgstr "Veličina međuspremnika"
 
 #: po/advisory_rules.php:251
 #, fuzzy
@@ -12950,6 +12957,26 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "Iskorištenost prostora"
+
+#, fuzzy
+#~| msgid "Show open tables"
+#~ msgid "% open files"
+#~ msgstr "Prikaži otvorene tablice"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% connections used"
+#~ msgstr "Veze"
+
+#, fuzzy
+#~| msgid "max. concurrent connections"
+#~ msgid "% aborted connections"
+#~ msgstr "najv. uzastopnih veza"
 
 #, fuzzy
 #~| msgid "Usage"
