--- a/po/ms.po
+++ b/po/ms.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2010-03-12 09:17+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: malay <ms@li.org>\n"
@@ -1171,7 +1171,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "Jenis Kueri"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 msgid "Query cache usage"
 msgstr "Jenis Kueri"
@@ -11342,8 +11342,8 @@ msgid "Current amount of Questions: %s"
 msgstr "Hubungan"
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
-msgid "% slow queries"
+#, fuzzy
+msgid "Percentage of slow queries"
 msgstr "kueri-SQL"
 
 #: po/advisory_rules.php:16
@@ -11364,7 +11364,7 @@ msgstr ""
 
 #: po/advisory_rules.php:20
 #, fuzzy
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "kueri-SQL"
 
 #: po/advisory_rules.php:21
@@ -11540,12 +11540,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "Penggunaan ruang"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -11707,8 +11701,7 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, php-format
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -11729,7 +11722,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
+msgid "Rate of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:113
@@ -11762,7 +11755,7 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
+msgid "Rate of joins without indexes"
 msgstr ""
 
 #: po/advisory_rules.php:121
@@ -11781,7 +11774,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -11804,7 +11797,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -11826,7 +11819,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -11867,10 +11860,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table(s)"
-msgid "% temp disk tables"
-msgstr "%s jadual"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -11897,8 +11888,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table(s)"
+msgid "Temp disk rate"
+msgstr "%s jadual"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -11937,7 +11930,7 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
+msgid "Max % MyISAM key buffer ever used"
 msgstr ""
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
@@ -11958,7 +11951,7 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
+msgid "Percentage of MyISAM key buffer used"
 msgstr ""
 
 #: po/advisory_rules.php:168
@@ -11967,7 +11960,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -11986,7 +11979,7 @@ msgstr ""
 
 #: po/advisory_rules.php:175
 #, fuzzy
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "Cipta Halaman baru"
 
 #: po/advisory_rules.php:176
@@ -12005,9 +11998,9 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, fuzzy, php-format
-msgid "% open files"
-msgstr "Papar jadual"
+#, fuzzy
+msgid "Percentage of used open files limit"
+msgstr "Fail bagi set Aksara:"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -12029,7 +12022,7 @@ msgstr ""
 
 #: po/advisory_rules.php:185
 #, fuzzy
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "Fail bagi set Aksara:"
 
 #: po/advisory_rules.php:186
@@ -12071,7 +12064,7 @@ msgstr ""
 
 #: po/advisory_rules.php:200
 #, fuzzy
-msgid "thread cache"
+msgid "Thread cache"
 msgstr "Jenis Kueri"
 
 #: po/advisory_rules.php:201
@@ -12089,8 +12082,9 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+msgid "Thread cache hit rate %"
+msgstr "Jenis Kueri"
 
 #: po/advisory_rules.php:206
 msgid "Thread cache is not efficient."
@@ -12144,9 +12138,9 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Connections"
-msgid "% connections used"
+msgid "Percentage of used connections"
 msgstr "Hubungan"
 
 #: po/advisory_rules.php:221
@@ -12171,7 +12165,7 @@ msgstr ""
 #: po/advisory_rules.php:225
 #, fuzzy
 #| msgid "Connections"
-msgid "% aborted connections"
+msgid "Percentage of aborted connections"
 msgstr "Hubungan"
 
 #: po/advisory_rules.php:226
@@ -12194,7 +12188,7 @@ msgstr ""
 #: po/advisory_rules.php:230
 #, fuzzy
 #| msgid "Connections"
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr "Hubungan"
 
 #: po/advisory_rules.php:231
@@ -12208,8 +12202,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Table of contents"
+msgid "Percentage of aborted clients"
+msgstr "Kandungan"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12230,7 +12226,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Table of contents"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "Kandungan"
 
 #: po/advisory_rules.php:243
@@ -12255,7 +12251,7 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
+msgid "InnoDB log size"
 msgstr ""
 
 #: po/advisory_rules.php:251
@@ -12361,6 +12357,25 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "Penggunaan ruang"
+
+#, fuzzy
+#~ msgid "% open files"
+#~ msgstr "Papar jadual"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% connections used"
+#~ msgstr "Hubungan"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% aborted connections"
+#~ msgstr "Hubungan"
 
 #, fuzzy
 #~| msgid "Usage"
