--- a/po/ru.po
+++ b/po/ru.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2011-07-03 19:50+0200\n"
 "Last-Translator: Victor Volkov <hanut@php-myadmin.ru>\n"
 "Language-Team: russian <ru@li.org>\n"
@@ -1152,7 +1152,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "Кеш запросов"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 #| msgid "Query cache"
 msgid "Query cache usage"
@@ -11735,9 +11735,9 @@ msgid "Current amount of Questions: %s"
 msgstr "Текущее соединение"
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Show SQL queries"
-msgid "% slow queries"
+msgid "Percentage of slow queries"
 msgstr "Показывать SQL запросы"
 
 #: po/advisory_rules.php:16
@@ -11759,7 +11759,7 @@ msgstr ""
 #: po/advisory_rules.php:20
 #, fuzzy
 #| msgid "Flush query cache"
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "Дефрагментировать кеш запросов"
 
 #: po/advisory_rules.php:21
@@ -11946,12 +11946,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "Используемое пространство"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -12118,9 +12112,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Allows creating temporary tables."
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr "Разрешает создание временных таблиц."
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -12143,8 +12137,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
-msgstr ""
+#, fuzzy
+#| msgid "Allows creating temporary tables."
+msgid "Rate of sorts that cause temporary tables"
+msgstr "Разрешает создание временных таблиц."
 
 #: po/advisory_rules.php:113
 #, php-format
@@ -12176,8 +12172,10 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
-msgstr ""
+#, fuzzy
+#| msgid "There are no routines to display."
+msgid "Rate of joins without indexes"
+msgstr "Нет процедур для отображения."
 
 #: po/advisory_rules.php:121
 #, fuzzy
@@ -12197,7 +12195,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -12220,7 +12218,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -12242,8 +12240,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
-msgstr ""
+#, fuzzy
+#| msgid "Where to show the table row links"
+msgid "Rate of reading next table row"
+msgstr "Где вывести ссылки строки таблицы"
 
 #: po/advisory_rules.php:136
 #, fuzzy
@@ -12286,10 +12286,9 @@ msgstr ""
 
 #: po/advisory_rules.php:145
 #, fuzzy
-#| msgid "%s table"
-#| msgid_plural "%s tables"
-msgid "% temp disk tables"
-msgstr "%s таблица"
+#| msgid "Where to show the table row links"
+msgid "Percentage of temp tables on disk"
+msgstr "Где вывести ссылки строки таблицы"
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -12316,8 +12315,11 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table"
+#| msgid_plural "%s tables"
+msgid "Temp disk rate"
+msgstr "%s таблица"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -12358,8 +12360,10 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Max % MyISAM key buffer ever used"
+msgstr "Размер буфера сортировки"
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
 #, php-format
@@ -12379,8 +12383,10 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Percentage of MyISAM key buffer used"
+msgstr "Размер буфера сортировки"
 
 #: po/advisory_rules.php:168
 #, php-format
@@ -12388,7 +12394,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -12408,7 +12414,7 @@ msgstr ""
 #: po/advisory_rules.php:175
 #, fuzzy
 #| msgid "Create table"
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "Создать таблицу"
 
 #: po/advisory_rules.php:176
@@ -12429,10 +12435,10 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, fuzzy, php-format
-#| msgid "Show open tables"
-msgid "% open files"
-msgstr "Список открытых таблиц"
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of used open files limit"
+msgstr "Формат импортируемого файла"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -12455,7 +12461,7 @@ msgstr ""
 #: po/advisory_rules.php:185
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "Формат импортируемого файла"
 
 #: po/advisory_rules.php:186
@@ -12505,7 +12511,7 @@ msgstr ""
 #: po/advisory_rules.php:200
 #, fuzzy
 #| msgid "Key cache"
-msgid "thread cache"
+msgid "Thread cache"
 msgstr "Кеш индекса"
 
 #: po/advisory_rules.php:201
@@ -12523,8 +12529,10 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+#| msgid "Tracking is not active."
+msgid "Thread cache hit rate %"
+msgstr "Слежение выключено."
 
 #: po/advisory_rules.php:206
 #, fuzzy
@@ -12582,10 +12590,10 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
-#| msgid "Connections"
-msgid "% connections used"
-msgstr "Соединения"
+#, fuzzy
+#| msgid "Persistent connections"
+msgid "Percentage of used connections"
+msgstr "Постоянные соединения"
 
 #: po/advisory_rules.php:221
 msgid ""
@@ -12608,9 +12616,9 @@ msgstr ""
 
 #: po/advisory_rules.php:225
 #, fuzzy
-#| msgid "Compress connection"
-msgid "% aborted connections"
-msgstr "Соединение со сжатием"
+#| msgid "Persistent connections"
+msgid "Percentage of aborted connections"
+msgstr "Постоянные соединения"
 
 #: po/advisory_rules.php:226
 msgid "Too many connections are aborted."
@@ -12632,7 +12640,7 @@ msgstr ""
 #: po/advisory_rules.php:230
 #, fuzzy
 #| msgid "Persistent connections"
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr "Постоянные соединения"
 
 #: po/advisory_rules.php:231
@@ -12646,8 +12654,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of aborted clients"
+msgstr "Формат импортируемого файла"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12668,7 +12678,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "Формат импортируемого файла"
 
 #: po/advisory_rules.php:243
@@ -12695,8 +12705,10 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
-msgstr ""
+#, fuzzy
+#| msgid "Buffer pool size"
+msgid "InnoDB log size"
+msgstr "Размер буферного пула"
 
 #: po/advisory_rules.php:251
 #, fuzzy
@@ -12807,6 +12819,26 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "Используемое пространство"
+
+#, fuzzy
+#~| msgid "Show open tables"
+#~ msgid "% open files"
+#~ msgstr "Список открытых таблиц"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% connections used"
+#~ msgstr "Соединения"
+
+#, fuzzy
+#~| msgid "Compress connection"
+#~ msgid "% aborted connections"
+#~ msgstr "Соединение со сжатием"
 
 #, fuzzy
 #~| msgid "Usage"
