--- a/po/si.po
+++ b/po/si.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2011-06-04 15:35+0200\n"
 "Last-Translator: Madhura Jayaratne <madhura.cj@gmail.com>\n"
 "Language-Team: sinhala <si@li.org>\n"
@@ -1152,7 +1152,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "විමසුම් කෑෂ්"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 #| msgid "Query cache"
 msgid "Query cache usage"
@@ -11467,9 +11467,9 @@ msgid "Current amount of Questions: %s"
 msgstr "වත්මන් සම්බන්දතාව"
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Show SQL queries"
-msgid "% slow queries"
+msgid "Percentage of slow queries"
 msgstr "SQL විමසුම් පෙන්වන්න"
 
 #: po/advisory_rules.php:16
@@ -11491,7 +11491,7 @@ msgstr ""
 #: po/advisory_rules.php:20
 #, fuzzy
 #| msgid "Flush query cache"
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "Flush query cache"
 
 #: po/advisory_rules.php:21
@@ -11676,12 +11676,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "අවකාශ භාවිතය"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -11848,9 +11842,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Allows creating temporary tables."
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr "Allows creating temporary tables."
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -11873,8 +11867,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
-msgstr ""
+#, fuzzy
+#| msgid "Allows creating temporary tables."
+msgid "Rate of sorts that cause temporary tables"
+msgstr "Allows creating temporary tables."
 
 #: po/advisory_rules.php:113
 #, php-format
@@ -11906,8 +11902,10 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
-msgstr ""
+#, fuzzy
+#| msgid "There are no files to upload"
+msgid "Rate of joins without indexes"
+msgstr "උඩුගත කිරීම සඳහා ගොනු නොමැත"
 
 #: po/advisory_rules.php:121
 #, fuzzy
@@ -11927,7 +11925,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -11950,7 +11948,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -11972,7 +11970,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -12013,11 +12011,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table"
-#| msgid_plural "%s tables"
-msgid "% temp disk tables"
-msgstr "%s වගු"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -12044,8 +12039,11 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table"
+#| msgid_plural "%s tables"
+msgid "Temp disk rate"
+msgstr "%s වගු"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -12086,8 +12084,10 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Max % MyISAM key buffer ever used"
+msgstr "Sort buffer size"
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
 #, php-format
@@ -12107,8 +12107,10 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Percentage of MyISAM key buffer used"
+msgstr "Sort buffer size"
 
 #: po/advisory_rules.php:168
 #, php-format
@@ -12116,7 +12118,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -12136,7 +12138,7 @@ msgstr ""
 #: po/advisory_rules.php:175
 #, fuzzy
 #| msgid "Create table"
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "වගුව සාදන්න"
 
 #: po/advisory_rules.php:176
@@ -12157,10 +12159,10 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, fuzzy, php-format
-#| msgid "Show open tables"
-msgid "% open files"
-msgstr "විවෘත වගු පෙන්වන්න"
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of used open files limit"
+msgstr "ආනයනය කරන ලද ගොනුවේ ආකෘතිය"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -12183,7 +12185,7 @@ msgstr ""
 #: po/advisory_rules.php:185
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "ආනයනය කරන ලද ගොනුවේ ආකෘතිය"
 
 #: po/advisory_rules.php:186
@@ -12230,7 +12232,7 @@ msgstr ""
 #: po/advisory_rules.php:200
 #, fuzzy
 #| msgid "Key cache"
-msgid "thread cache"
+msgid "Thread cache"
 msgstr "යතුරු කෑෂ් කිරීම"
 
 #: po/advisory_rules.php:201
@@ -12248,8 +12250,10 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+#| msgid "Tracking is not active."
+msgid "Thread cache hit rate %"
+msgstr "අවධානය අක්‍රීයයි."
 
 #: po/advisory_rules.php:206
 #, fuzzy
@@ -12307,10 +12311,10 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
-#| msgid "Connections"
-msgid "% connections used"
-msgstr "සම්බන්ධතා"
+#, fuzzy
+#| msgid "max. concurrent connections"
+msgid "Percentage of used connections"
+msgstr "උපරිම සමගාමී සම්බන්ධතා"
 
 #: po/advisory_rules.php:221
 msgid ""
@@ -12333,9 +12337,9 @@ msgstr ""
 
 #: po/advisory_rules.php:225
 #, fuzzy
-#| msgid "Force SSL connection"
-msgid "% aborted connections"
-msgstr "SSL සම්බන්දතාවක් යොදා ගැනීමට බල කරන්න"
+#| msgid "max. concurrent connections"
+msgid "Percentage of aborted connections"
+msgstr "උපරිම සමගාමී සම්බන්ධතා"
 
 #: po/advisory_rules.php:226
 msgid "Too many connections are aborted."
@@ -12357,7 +12361,7 @@ msgstr ""
 #: po/advisory_rules.php:230
 #, fuzzy
 #| msgid "max. concurrent connections"
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr "උපරිම සමගාමී සම්බන්ධතා"
 
 #: po/advisory_rules.php:231
@@ -12371,8 +12375,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of aborted clients"
+msgstr "ආනයනය කරන ලද ගොනුවේ ආකෘතිය"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12393,7 +12399,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "ආනයනය කරන ලද ගොනුවේ ආකෘතිය"
 
 #: po/advisory_rules.php:243
@@ -12420,8 +12426,10 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
-msgstr ""
+#, fuzzy
+#| msgid "Buffer pool size"
+msgid "InnoDB log size"
+msgstr "Buffer pool size"
 
 #: po/advisory_rules.php:251
 #, fuzzy
@@ -12532,6 +12540,26 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "අවකාශ භාවිතය"
+
+#, fuzzy
+#~| msgid "Show open tables"
+#~ msgid "% open files"
+#~ msgstr "විවෘත වගු පෙන්වන්න"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% connections used"
+#~ msgstr "සම්බන්ධතා"
+
+#, fuzzy
+#~| msgid "Force SSL connection"
+#~ msgid "% aborted connections"
+#~ msgstr "SSL සම්බන්දතාවක් යොදා ගැනීමට බල කරන්න"
 
 #, fuzzy
 #~| msgid "Usage"
