--- a/po/sq.po
+++ b/po/sq.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2010-07-21 14:51+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: albanian <sq@li.org>\n"
@@ -1181,7 +1181,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "Lloji i query"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 msgid "Query cache usage"
 msgstr "Lloji i query"
@@ -11532,8 +11532,8 @@ msgid "Current amount of Questions: %s"
 msgstr "Lidhje"
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
-msgid "% slow queries"
+#, fuzzy
+msgid "Percentage of slow queries"
 msgstr "Shfaq të gjitha kërkesat"
 
 #: po/advisory_rules.php:16
@@ -11554,7 +11554,7 @@ msgstr ""
 
 #: po/advisory_rules.php:20
 #, fuzzy
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "query SQL"
 
 #: po/advisory_rules.php:21
@@ -11734,12 +11734,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "Hapësira e përdorur"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -11900,9 +11894,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Allows creating temporary tables."
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr "Lejon krijimin e tabelave të përkohëshme."
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -11925,8 +11919,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
-msgstr ""
+#, fuzzy
+#| msgid "Allows creating temporary tables."
+msgid "Rate of sorts that cause temporary tables"
+msgstr "Lejon krijimin e tabelave të përkohëshme."
 
 #: po/advisory_rules.php:113
 #, php-format
@@ -11958,7 +11954,7 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
+msgid "Rate of joins without indexes"
 msgstr ""
 
 #: po/advisory_rules.php:121
@@ -11977,7 +11973,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -12000,7 +11996,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -12022,7 +12018,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -12063,10 +12059,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table(s)"
-msgid "% temp disk tables"
-msgstr "%s tabela(at)"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -12093,8 +12087,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table(s)"
+msgid "Temp disk rate"
+msgstr "%s tabela(at)"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -12133,7 +12129,7 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
+msgid "Max % MyISAM key buffer ever used"
 msgstr ""
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
@@ -12154,7 +12150,7 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
+msgid "Percentage of MyISAM key buffer used"
 msgstr ""
 
 #: po/advisory_rules.php:168
@@ -12163,7 +12159,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -12182,7 +12178,7 @@ msgstr ""
 
 #: po/advisory_rules.php:175
 #, fuzzy
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "Krijo një faqe të re"
 
 #: po/advisory_rules.php:176
@@ -12201,9 +12197,9 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, fuzzy, php-format
-msgid "% open files"
-msgstr "Shfaq tabelat"
+#, fuzzy
+msgid "Percentage of used open files limit"
+msgstr "Familja gërmave të file:"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -12225,7 +12221,7 @@ msgstr ""
 
 #: po/advisory_rules.php:185
 #, fuzzy
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "Familja gërmave të file:"
 
 #: po/advisory_rules.php:186
@@ -12267,7 +12263,7 @@ msgstr ""
 
 #: po/advisory_rules.php:200
 #, fuzzy
-msgid "thread cache"
+msgid "Thread cache"
 msgstr "Lloji i query"
 
 #: po/advisory_rules.php:201
@@ -12285,8 +12281,10 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+#| msgid "Tracking is not active."
+msgid "Thread cache hit rate %"
+msgstr "Gjurmimi nuk është aktiv."
 
 #: po/advisory_rules.php:206
 #, fuzzy
@@ -12342,9 +12340,9 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Connections"
-msgid "% connections used"
+msgid "Percentage of used connections"
 msgstr "Lidhje"
 
 #: po/advisory_rules.php:221
@@ -12369,7 +12367,7 @@ msgstr ""
 #: po/advisory_rules.php:225
 #, fuzzy
 #| msgid "Connections"
-msgid "% aborted connections"
+msgid "Percentage of aborted connections"
 msgstr "Lidhje"
 
 #: po/advisory_rules.php:226
@@ -12392,7 +12390,7 @@ msgstr ""
 #: po/advisory_rules.php:230
 #, fuzzy
 #| msgid "Connections"
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr "Lidhje"
 
 #: po/advisory_rules.php:231
@@ -12406,8 +12404,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Table of contents"
+msgid "Percentage of aborted clients"
+msgstr "Tabela e përmbajtjes"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12428,7 +12428,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Table of contents"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "Tabela e përmbajtjes"
 
 #: po/advisory_rules.php:243
@@ -12453,7 +12453,7 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
+msgid "InnoDB log size"
 msgstr ""
 
 #: po/advisory_rules.php:251
@@ -12559,6 +12559,25 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "Hapësira e përdorur"
+
+#, fuzzy
+#~ msgid "% open files"
+#~ msgstr "Shfaq tabelat"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% connections used"
+#~ msgstr "Lidhje"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% aborted connections"
+#~ msgstr "Lidhje"
 
 #, fuzzy
 #~| msgid "Usage"
