--- a/po/te.po
+++ b/po/te.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2011-04-07 17:06+0200\n"
 "Last-Translator: <veeven@gmail.com>\n"
 "Language-Team: Telugu <te@li.org>\n"
@@ -1148,7 +1148,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr ""
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 msgid "Query cache usage"
 msgstr ""
 
@@ -11072,8 +11072,7 @@ msgid "Current amount of Questions: %s"
 msgstr "అనుసంధానాలు"
 
 #: po/advisory_rules.php:15
-#, php-format
-msgid "% slow queries"
+msgid "Percentage of slow queries"
 msgstr ""
 
 #: po/advisory_rules.php:16
@@ -11093,7 +11092,7 @@ msgid "The slow query rate should be below 5%%, your value is %s%%."
 msgstr ""
 
 #: po/advisory_rules.php:20
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr ""
 
 #: po/advisory_rules.php:21
@@ -11262,10 +11261,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-msgid "memcached usage"
-msgstr ""
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -11422,8 +11417,7 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, php-format
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -11444,7 +11438,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
+msgid "Rate of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:113
@@ -11477,7 +11471,7 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
+msgid "Rate of joins without indexes"
 msgstr ""
 
 #: po/advisory_rules.php:121
@@ -11496,7 +11490,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -11519,7 +11513,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -11541,7 +11535,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -11582,11 +11576,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table"
-#| msgid_plural "%s tables"
-msgid "% temp disk tables"
-msgstr "%s పట్టిక"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -11613,8 +11604,11 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table"
+#| msgid_plural "%s tables"
+msgid "Temp disk rate"
+msgstr "%s పట్టిక"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -11653,7 +11647,7 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
+msgid "Max % MyISAM key buffer ever used"
 msgstr ""
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
@@ -11674,7 +11668,7 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
+msgid "Percentage of MyISAM key buffer used"
 msgstr ""
 
 #: po/advisory_rules.php:168
@@ -11683,7 +11677,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -11705,7 +11699,7 @@ msgstr ""
 #, fuzzy
 #| msgctxt "short form"
 #| msgid "Create table"
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "పట్టికను సృష్టించు"
 
 #: po/advisory_rules.php:176
@@ -11724,8 +11718,7 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, php-format
-msgid "% open files"
+msgid "Percentage of used open files limit"
 msgstr ""
 
 #: po/advisory_rules.php:181
@@ -11747,8 +11740,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:185
-msgid "rate of open files"
-msgstr ""
+#, fuzzy
+#| msgid "Table of contents"
+msgid "Rate of open files"
+msgstr "విషయ సూచిక"
 
 #: po/advisory_rules.php:186
 msgid "The rate of opening files is high."
@@ -11786,7 +11781,7 @@ msgid "Table lock wait rate: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:200
-msgid "thread cache"
+msgid "Thread cache"
 msgstr ""
 
 #: po/advisory_rules.php:201
@@ -11804,7 +11799,7 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
+msgid "Thread cache hit rate %"
 msgstr ""
 
 #: po/advisory_rules.php:206
@@ -11859,9 +11854,9 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Connections"
-msgid "% connections used"
+msgid "Percentage of used connections"
 msgstr "అనుసంధానాలు"
 
 #: po/advisory_rules.php:221
@@ -11886,7 +11881,7 @@ msgstr ""
 #: po/advisory_rules.php:225
 #, fuzzy
 #| msgid "Connections"
-msgid "% aborted connections"
+msgid "Percentage of aborted connections"
 msgstr "అనుసంధానాలు"
 
 #: po/advisory_rules.php:226
@@ -11909,7 +11904,7 @@ msgstr ""
 #: po/advisory_rules.php:230
 #, fuzzy
 #| msgid "Connections"
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr "అనుసంధానాలు"
 
 #: po/advisory_rules.php:231
@@ -11923,8 +11918,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Table of contents"
+msgid "Percentage of aborted clients"
+msgstr "విషయ సూచిక"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -11945,7 +11942,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Table of contents"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "విషయ సూచిక"
 
 #: po/advisory_rules.php:243
@@ -11972,7 +11969,7 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
+msgid "InnoDB log size"
 msgstr ""
 
 #: po/advisory_rules.php:251
@@ -12078,6 +12075,16 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% connections used"
+#~ msgstr "అనుసంధానాలు"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% aborted connections"
+#~ msgstr "అనుసంధానాలు"
 
 #, fuzzy
 #~| msgid "Usage"
