--- a/po/cy.po
+++ b/po/cy.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2011-05-19 21:21+0200\n"
 "Last-Translator: <ardavies@tiscali.co.uk>\n"
 "Language-Team: Welsh <cy@li.org>\n"
@@ -1168,7 +1168,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "Tabl hanes ymholiadau SQL"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 #| msgid "Query results"
 msgid "Query cache usage"
@@ -11325,9 +11325,9 @@ msgid "Current amount of Questions: %s"
 msgstr ""
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Show SQL queries"
-msgid "% slow queries"
+msgid "Percentage of slow queries"
 msgstr "Dangos ymholiadau SQL"
 
 #: po/advisory_rules.php:16
@@ -11349,7 +11349,7 @@ msgstr ""
 #: po/advisory_rules.php:20
 #, fuzzy
 #| msgid "Show insert query"
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "Dangos ymholiad mewnosod"
 
 #: po/advisory_rules.php:21
@@ -11534,12 +11534,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Latched pages"
-msgid "memcached usage"
-msgstr "Tudalennau "
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -11702,8 +11696,7 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, php-format
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -11724,7 +11717,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
+msgid "Rate of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:113
@@ -11757,8 +11750,10 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
-msgstr ""
+#, fuzzy
+#| msgid "There are no configured servers"
+msgid "Rate of joins without indexes"
+msgstr "Nid oes unrhyw gweinyddion a ffurfweddwyd"
 
 #: po/advisory_rules.php:121
 #, fuzzy
@@ -11778,7 +11773,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -11801,7 +11796,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -11823,7 +11818,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -11864,11 +11859,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table"
-#| msgid_plural "%s tables"
-msgid "% temp disk tables"
-msgstr "%s tabl"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -11895,8 +11887,11 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table"
+#| msgid_plural "%s tables"
+msgid "Temp disk rate"
+msgstr "%s tabl"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -11937,8 +11932,10 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Max % MyISAM key buffer ever used"
+msgstr "Trefnu maint y byffer"
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
 #, php-format
@@ -11958,8 +11955,10 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Percentage of MyISAM key buffer used"
+msgstr "Trefnu maint y byffer"
 
 #: po/advisory_rules.php:168
 #, php-format
@@ -11967,7 +11966,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -11987,7 +11986,7 @@ msgstr ""
 #: po/advisory_rules.php:175
 #, fuzzy
 #| msgid "Create table"
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "Crëwch dabl"
 
 #: po/advisory_rules.php:176
@@ -12006,9 +12005,10 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, php-format
-msgid "% open files"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of used open files limit"
+msgstr "Fformat y ffeil a mewnforiwyd"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -12031,7 +12031,7 @@ msgstr ""
 #: po/advisory_rules.php:185
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "Fformat y ffeil a mewnforiwyd"
 
 #: po/advisory_rules.php:186
@@ -12072,7 +12072,7 @@ msgid "Table lock wait rate: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:200
-msgid "thread cache"
+msgid "Thread cache"
 msgstr ""
 
 #: po/advisory_rules.php:201
@@ -12090,8 +12090,10 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+#| msgid "Tracking is not active."
+msgid "Thread cache hit rate %"
+msgstr "Nid yw tracio'n weithredol"
 
 #: po/advisory_rules.php:206
 #, fuzzy
@@ -12147,10 +12149,8 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
-#| msgid "MySQL connection collation"
-msgid "% connections used"
-msgstr "Coladiad cysylltiad MySQL"
+msgid "Percentage of used connections"
+msgstr ""
 
 #: po/advisory_rules.php:221
 msgid ""
@@ -12172,8 +12172,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:225
-msgid "% aborted connections"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of aborted connections"
+msgstr "Fformat y ffeil a mewnforiwyd"
 
 #: po/advisory_rules.php:226
 msgid "Too many connections are aborted."
@@ -12193,8 +12195,10 @@ msgid "%s%% of all connections are aborted. This value should be below 1%%"
 msgstr ""
 
 #: po/advisory_rules.php:230
-msgid "rate of aborted connections"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Rate of aborted connections"
+msgstr "Fformat y ffeil a mewnforiwyd"
 
 #: po/advisory_rules.php:231
 msgid "Too many connections are aborted"
@@ -12207,8 +12211,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of aborted clients"
+msgstr "Fformat y ffeil a mewnforiwyd"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12229,7 +12235,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "Fformat y ffeil a mewnforiwyd"
 
 #: po/advisory_rules.php:243
@@ -12254,8 +12260,10 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
-msgstr ""
+#, fuzzy
+#| msgid "Buffer pool size"
+msgid "InnoDB log size"
+msgstr "Maint y pwll byffer"
 
 #: po/advisory_rules.php:251
 msgid ""
@@ -12362,6 +12370,16 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Latched pages"
+#~ msgid "memcached usage"
+#~ msgstr "Tudalennau "
+
+#, fuzzy
+#~| msgid "MySQL connection collation"
+#~ msgid "% connections used"
+#~ msgstr "Coladiad cysylltiad MySQL"
 
 #, fuzzy
 #~ msgctxt "PDF"
