--- a/po/el.po
+++ b/po/el.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2011-07-29 14:17+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
@@ -1148,7 +1148,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "Λανθάνουσα μνήμη ερωτήματος"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 #| msgid "Query cache"
 msgid "Query cache usage"
@@ -11751,9 +11751,9 @@ msgid "Current amount of Questions: %s"
 msgstr "Τρέχουσα σύνδεση"
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Show SQL queries"
-msgid "% slow queries"
+msgid "Percentage of slow queries"
 msgstr "Εμφάνιση ερωτημάτων SQL"
 
 #: po/advisory_rules.php:16
@@ -11775,7 +11775,7 @@ msgstr ""
 #: po/advisory_rules.php:20
 #, fuzzy
 #| msgid "Flush query cache"
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "Εκκαθάριση λανθάνουσας μνήμης ερωτημάτων"
 
 #: po/advisory_rules.php:21
@@ -11963,12 +11963,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "Χρήση χώρου"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -12135,9 +12129,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Allows creating temporary tables."
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr "Επιτρέπει τη δημιουργία προσωρινών πινάκων."
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -12160,8 +12154,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
-msgstr ""
+#, fuzzy
+#| msgid "Allows creating temporary tables."
+msgid "Rate of sorts that cause temporary tables"
+msgstr "Επιτρέπει τη δημιουργία προσωρινών πινάκων."
 
 #: po/advisory_rules.php:113
 #, php-format
@@ -12193,8 +12189,10 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
-msgstr ""
+#, fuzzy
+#| msgid "There are no routines to display."
+msgid "Rate of joins without indexes"
+msgstr "Δεν υπάρχουν ρουτίνες για εμφάνιση."
 
 #: po/advisory_rules.php:121
 #, fuzzy
@@ -12214,7 +12212,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -12237,7 +12235,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -12259,8 +12257,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
-msgstr ""
+#, fuzzy
+#| msgid "Where to show the table row links"
+msgid "Rate of reading next table row"
+msgstr "Που να προβάλονται οι σύνδεσμοι γραμμής πίνακα"
 
 #: po/advisory_rules.php:136
 #, fuzzy
@@ -12303,10 +12303,9 @@ msgstr ""
 
 #: po/advisory_rules.php:145
 #, fuzzy
-#| msgid "%s table"
-#| msgid_plural "%s tables"
-msgid "% temp disk tables"
-msgstr "%s πίνακας"
+#| msgid "Where to show the table row links"
+msgid "Percentage of temp tables on disk"
+msgstr "Που να προβάλονται οι σύνδεσμοι γραμμής πίνακα"
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -12333,8 +12332,11 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table"
+#| msgid_plural "%s tables"
+msgid "Temp disk rate"
+msgstr "%s πίνακας"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -12375,8 +12377,10 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Max % MyISAM key buffer ever used"
+msgstr "Μέγεθος buffer ταξινόμησης"
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
 #, php-format
@@ -12396,8 +12400,10 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Percentage of MyISAM key buffer used"
+msgstr "Μέγεθος buffer ταξινόμησης"
 
 #: po/advisory_rules.php:168
 #, php-format
@@ -12405,7 +12411,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -12425,7 +12431,7 @@ msgstr ""
 #: po/advisory_rules.php:175
 #, fuzzy
 #| msgid "Create table"
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "Δημιουργία πίνακα"
 
 #: po/advisory_rules.php:176
@@ -12446,10 +12452,10 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, fuzzy, php-format
-#| msgid "Show open tables"
-msgid "% open files"
-msgstr "Εμφάνιση ανοιχτών πινάκων"
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of used open files limit"
+msgstr "Μορφή εισαχθέντος αρχείου"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -12472,7 +12478,7 @@ msgstr ""
 #: po/advisory_rules.php:185
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "Μορφή εισαχθέντος αρχείου"
 
 #: po/advisory_rules.php:186
@@ -12519,7 +12525,7 @@ msgstr ""
 #: po/advisory_rules.php:200
 #, fuzzy
 #| msgid "Key cache"
-msgid "thread cache"
+msgid "Thread cache"
 msgstr "Λανθάνουσα μνήμη κλειδιού"
 
 #: po/advisory_rules.php:201
@@ -12537,8 +12543,10 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+#| msgid "Tracking is not active."
+msgid "Thread cache hit rate %"
+msgstr "Η παρακολούθηση δεν είναι ενεργοποιημένη."
 
 #: po/advisory_rules.php:206
 #, fuzzy
@@ -12597,10 +12605,10 @@ msgid "slow_launch_time is set to %s"
 msgstr "Το long_query_time έχει οριστεί σε %d δευτερόλεπτο(α)."
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
-#| msgid "Connections"
-msgid "% connections used"
-msgstr "Συνδέσεις"
+#, fuzzy
+#| msgid "Persistent connections"
+msgid "Percentage of used connections"
+msgstr "Επιμένουσες συνδέσεις"
 
 #: po/advisory_rules.php:221
 msgid ""
@@ -12623,9 +12631,9 @@ msgstr ""
 
 #: po/advisory_rules.php:225
 #, fuzzy
-#| msgid "Compress connection"
-msgid "% aborted connections"
-msgstr "Σύνδεση συμπίεσης"
+#| msgid "Persistent connections"
+msgid "Percentage of aborted connections"
+msgstr "Επιμένουσες συνδέσεις"
 
 #: po/advisory_rules.php:226
 msgid "Too many connections are aborted."
@@ -12647,7 +12655,7 @@ msgstr ""
 #: po/advisory_rules.php:230
 #, fuzzy
 #| msgid "Persistent connections"
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr "Επιμένουσες συνδέσεις"
 
 #: po/advisory_rules.php:231
@@ -12661,8 +12669,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of aborted clients"
+msgstr "Μορφή εισαχθέντος αρχείου"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12683,7 +12693,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "Μορφή εισαχθέντος αρχείου"
 
 #: po/advisory_rules.php:243
@@ -12710,8 +12720,10 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
-msgstr ""
+#, fuzzy
+#| msgid "Buffer pool size"
+msgid "InnoDB log size"
+msgstr "Μέγεθος buffer pool"
 
 #: po/advisory_rules.php:251
 #, fuzzy
@@ -12822,6 +12834,26 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "Χρήση χώρου"
+
+#, fuzzy
+#~| msgid "Show open tables"
+#~ msgid "% open files"
+#~ msgstr "Εμφάνιση ανοιχτών πινάκων"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% connections used"
+#~ msgstr "Συνδέσεις"
+
+#, fuzzy
+#~| msgid "Compress connection"
+#~ msgid "% aborted connections"
+#~ msgstr "Σύνδεση συμπίεσης"
 
 #~ msgid "CPU Usage"
 #~ msgstr "Χρήση CPU"
