--- a/po/lv.po
+++ b/po/lv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2010-03-12 09:16+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: latvian <lv@li.org>\n"
@@ -1179,7 +1179,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "Vaicājuma tips"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 msgid "Query cache usage"
 msgstr "Vaicājuma tips"
@@ -11541,8 +11541,8 @@ msgid "Current amount of Questions: %s"
 msgstr "Konekcijas"
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
-msgid "% slow queries"
+#, fuzzy
+msgid "Percentage of slow queries"
 msgstr "Rādīt pilnos vaicājumus"
 
 #: po/advisory_rules.php:16
@@ -11563,7 +11563,7 @@ msgstr ""
 
 #: po/advisory_rules.php:20
 #, fuzzy
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "SQL vaicājums"
 
 #: po/advisory_rules.php:21
@@ -11743,12 +11743,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "Diska vietas lietošana"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -11909,9 +11903,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Allows creating temporary tables."
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr "Ļauj veidot pagaidu tabulas."
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -11934,8 +11928,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
-msgstr ""
+#, fuzzy
+#| msgid "Allows creating temporary tables."
+msgid "Rate of sorts that cause temporary tables"
+msgstr "Ļauj veidot pagaidu tabulas."
 
 #: po/advisory_rules.php:113
 #, php-format
@@ -11967,7 +11963,7 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
+msgid "Rate of joins without indexes"
 msgstr ""
 
 #: po/advisory_rules.php:121
@@ -11986,7 +11982,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -12009,7 +12005,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -12031,7 +12027,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -12072,10 +12068,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table(s)"
-msgid "% temp disk tables"
-msgstr "%s tabula(s)"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -12102,8 +12096,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table(s)"
+msgid "Temp disk rate"
+msgstr "%s tabula(s)"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -12142,7 +12138,7 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
+msgid "Max % MyISAM key buffer ever used"
 msgstr ""
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
@@ -12163,7 +12159,7 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
+msgid "Percentage of MyISAM key buffer used"
 msgstr ""
 
 #: po/advisory_rules.php:168
@@ -12172,7 +12168,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -12191,7 +12187,7 @@ msgstr ""
 
 #: po/advisory_rules.php:175
 #, fuzzy
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "Izveidot jaunu lapu"
 
 #: po/advisory_rules.php:176
@@ -12210,9 +12206,9 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, fuzzy, php-format
-msgid "% open files"
-msgstr "Rādīt tabulas"
+#, fuzzy
+msgid "Percentage of used open files limit"
+msgstr "Tabulas kodējums:"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -12234,7 +12230,7 @@ msgstr ""
 
 #: po/advisory_rules.php:185
 #, fuzzy
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "Tabulas kodējums:"
 
 #: po/advisory_rules.php:186
@@ -12276,7 +12272,7 @@ msgstr ""
 
 #: po/advisory_rules.php:200
 #, fuzzy
-msgid "thread cache"
+msgid "Thread cache"
 msgstr "Vaicājuma tips"
 
 #: po/advisory_rules.php:201
@@ -12294,8 +12290,9 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+msgid "Thread cache hit rate %"
+msgstr "Vaicājuma tips"
 
 #: po/advisory_rules.php:206
 msgid "Thread cache is not efficient."
@@ -12349,9 +12346,9 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Connections"
-msgid "% connections used"
+msgid "Percentage of used connections"
 msgstr "Konekcijas"
 
 #: po/advisory_rules.php:221
@@ -12376,7 +12373,7 @@ msgstr ""
 #: po/advisory_rules.php:225
 #, fuzzy
 #| msgid "Connections"
-msgid "% aborted connections"
+msgid "Percentage of aborted connections"
 msgstr "Konekcijas"
 
 #: po/advisory_rules.php:226
@@ -12399,7 +12396,7 @@ msgstr ""
 #: po/advisory_rules.php:230
 #, fuzzy
 #| msgid "Connections"
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr "Konekcijas"
 
 #: po/advisory_rules.php:231
@@ -12413,8 +12410,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Table of contents"
+msgid "Percentage of aborted clients"
+msgstr "Satura rādītājs"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12435,7 +12434,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Table of contents"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "Satura rādītājs"
 
 #: po/advisory_rules.php:243
@@ -12460,7 +12459,7 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
+msgid "InnoDB log size"
 msgstr ""
 
 #: po/advisory_rules.php:251
@@ -12566,6 +12565,25 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "Diska vietas lietošana"
+
+#, fuzzy
+#~ msgid "% open files"
+#~ msgstr "Rādīt tabulas"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% connections used"
+#~ msgstr "Konekcijas"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% aborted connections"
+#~ msgstr "Konekcijas"
 
 #, fuzzy
 #~| msgid "Usage"
