--- a/po/phpmyadmin.pot
+++ b/po/phpmyadmin.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1117,7 +1117,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr ""
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 msgid "Query cache usage"
 msgstr ""
 
@@ -10689,8 +10689,7 @@ msgid "Current amount of Questions: %s"
 msgstr ""
 
 #: po/advisory_rules.php:15
-#, possible-php-format
-msgid "% slow queries"
+msgid "Percentage of slow queries"
 msgstr ""
 
 #: po/advisory_rules.php:16
@@ -10710,7 +10709,7 @@ msgid "The slow query rate should be below 5%%, your value is %s%%."
 msgstr ""
 
 #: po/advisory_rules.php:20
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr ""
 
 #: po/advisory_rules.php:21
@@ -10876,10 +10875,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-msgid "memcached usage"
-msgstr ""
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -11036,8 +11031,7 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, possible-php-format
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -11058,7 +11052,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
+msgid "Rate of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:113
@@ -11089,7 +11083,7 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
+msgid "Rate of joins without indexes"
 msgstr ""
 
 #: po/advisory_rules.php:121
@@ -11108,7 +11102,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -11131,7 +11125,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -11153,7 +11147,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -11194,7 +11188,7 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-msgid "% temp disk tables"
+msgid "Percentage of temp tables on disk"
 msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
@@ -11222,7 +11216,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
+msgid "Temp disk rate"
 msgstr ""
 
 #: po/advisory_rules.php:152
@@ -11262,7 +11256,7 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
+msgid "Max % MyISAM key buffer ever used"
 msgstr ""
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
@@ -11283,7 +11277,7 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
+msgid "Percentage of MyISAM key buffer used"
 msgstr ""
 
 #: po/advisory_rules.php:168
@@ -11292,7 +11286,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -11310,7 +11304,7 @@ msgid "Index reads from memory: %s%%, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:175
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr ""
 
 #: po/advisory_rules.php:176
@@ -11329,8 +11323,7 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, possible-php-format
-msgid "% open files"
+msgid "Percentage of used open files limit"
 msgstr ""
 
 #: po/advisory_rules.php:181
@@ -11352,7 +11345,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:185
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr ""
 
 #: po/advisory_rules.php:186
@@ -11391,7 +11384,7 @@ msgid "Table lock wait rate: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:200
-msgid "thread cache"
+msgid "Thread cache"
 msgstr ""
 
 #: po/advisory_rules.php:201
@@ -11409,7 +11402,7 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
+msgid "Thread cache hit rate %"
 msgstr ""
 
 #: po/advisory_rules.php:206
@@ -11464,8 +11457,7 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, possible-php-format
-msgid "% connections used"
+msgid "Percentage of used connections"
 msgstr ""
 
 #: po/advisory_rules.php:221
@@ -11488,7 +11480,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:225
-msgid "% aborted connections"
+msgid "Percentage of aborted connections"
 msgstr ""
 
 #: po/advisory_rules.php:226
@@ -11509,7 +11501,7 @@ msgid "%s%% of all connections are aborted. This value should be below 1%%"
 msgstr ""
 
 #: po/advisory_rules.php:230
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr ""
 
 #: po/advisory_rules.php:231
@@ -11523,7 +11515,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
+msgid "Percentage of aborted clients"
 msgstr ""
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
@@ -11543,7 +11535,7 @@ msgid "%s%% of all clients are aborted. This value should be below 2%%"
 msgstr ""
 
 #: po/advisory_rules.php:240
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr ""
 
 #: po/advisory_rules.php:243
@@ -11568,7 +11560,7 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
+msgid "InnoDB log size"
 msgstr ""
 
 #: po/advisory_rules.php:251
