--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2011-07-30 02:20+0200\n"
 "Last-Translator: Julio Cesar Zuppa <juliozuppa@gmail.com>\n"
 "Language-Team: brazilian_portuguese <pt_BR@li.org>\n"
@@ -1146,7 +1146,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "Consulta do cache"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 #| msgid "Query cache"
 msgid "Query cache usage"
@@ -11672,9 +11672,9 @@ msgid "Current amount of Questions: %s"
 msgstr "Conexão atual"
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Show SQL queries"
-msgid "% slow queries"
+msgid "Percentage of slow queries"
 msgstr "Mostrar consultas SQL"
 
 #: po/advisory_rules.php:16
@@ -11696,7 +11696,7 @@ msgstr ""
 #: po/advisory_rules.php:20
 #, fuzzy
 #| msgid "Flush query cache"
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "Nivelar cache da consulta"
 
 #: po/advisory_rules.php:21
@@ -11884,12 +11884,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "Uso do espaço"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -12056,9 +12050,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Allows creating temporary tables."
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr "Permitir criar tabelas temporárias."
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -12081,8 +12075,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
-msgstr ""
+#, fuzzy
+#| msgid "Allows creating temporary tables."
+msgid "Rate of sorts that cause temporary tables"
+msgstr "Permitir criar tabelas temporárias."
 
 #: po/advisory_rules.php:113
 #, php-format
@@ -12113,8 +12109,10 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
-msgstr ""
+#, fuzzy
+#| msgid "There are no routines to display."
+msgid "Rate of joins without indexes"
+msgstr "Não existem rotinas para mostrar."
 
 #: po/advisory_rules.php:121
 #, fuzzy
@@ -12134,7 +12132,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -12157,7 +12155,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -12179,7 +12177,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -12220,11 +12218,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table"
-#| msgid_plural "%s tables"
-msgid "% temp disk tables"
-msgstr "%s tabela"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -12251,8 +12246,11 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table"
+#| msgid_plural "%s tables"
+msgid "Temp disk rate"
+msgstr "%s tabela"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -12293,8 +12291,10 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Max % MyISAM key buffer ever used"
+msgstr "Tamanho do buffer de ordenação"
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
 #, php-format
@@ -12314,8 +12314,10 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Percentage of MyISAM key buffer used"
+msgstr "Tamanho do buffer de ordenação"
 
 #: po/advisory_rules.php:168
 #, php-format
@@ -12323,7 +12325,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -12343,7 +12345,7 @@ msgstr ""
 #: po/advisory_rules.php:175
 #, fuzzy
 #| msgid "Create table"
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "Criar tabela"
 
 #: po/advisory_rules.php:176
@@ -12364,10 +12366,10 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, fuzzy, php-format
-#| msgid "Show open tables"
-msgid "% open files"
-msgstr "Exibir tabelas abertas"
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of used open files limit"
+msgstr "Formato do arquivo importado"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -12390,7 +12392,7 @@ msgstr ""
 #: po/advisory_rules.php:185
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "Formato do arquivo importado"
 
 #: po/advisory_rules.php:186
@@ -12438,7 +12440,7 @@ msgstr ""
 #: po/advisory_rules.php:200
 #, fuzzy
 #| msgid "Key cache"
-msgid "thread cache"
+msgid "Thread cache"
 msgstr "Chave do cache"
 
 #: po/advisory_rules.php:201
@@ -12456,8 +12458,10 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+#| msgid "Tracking is not active."
+msgid "Thread cache hit rate %"
+msgstr "Rastreamento não está ativo."
 
 #: po/advisory_rules.php:206
 #, fuzzy
@@ -12516,10 +12520,10 @@ msgid "slow_launch_time is set to %s"
 msgstr "\"long_query_time\" está definida para %d segundo(s)."
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
-#| msgid "Connections"
-msgid "% connections used"
-msgstr "Conexões"
+#, fuzzy
+#| msgid "Persistent connections"
+msgid "Percentage of used connections"
+msgstr "Conexões persistentes"
 
 #: po/advisory_rules.php:221
 msgid ""
@@ -12543,7 +12547,7 @@ msgstr ""
 #: po/advisory_rules.php:225
 #, fuzzy
 #| msgid "Persistent connections"
-msgid "% aborted connections"
+msgid "Percentage of aborted connections"
 msgstr "Conexões persistentes"
 
 #: po/advisory_rules.php:226
@@ -12566,7 +12570,7 @@ msgstr ""
 #: po/advisory_rules.php:230
 #, fuzzy
 #| msgid "Persistent connections"
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr "Conexões persistentes"
 
 #: po/advisory_rules.php:231
@@ -12580,8 +12584,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of aborted clients"
+msgstr "Formato do arquivo importado"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12602,7 +12608,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "Formato do arquivo importado"
 
 #: po/advisory_rules.php:243
@@ -12629,8 +12635,10 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
-msgstr ""
+#, fuzzy
+#| msgid "Buffer pool size"
+msgid "InnoDB log size"
+msgstr "Tamanho do Buffer Pool"
 
 #: po/advisory_rules.php:251
 #, fuzzy
@@ -12741,6 +12749,26 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "Uso do espaço"
+
+#, fuzzy
+#~| msgid "Show open tables"
+#~ msgid "% open files"
+#~ msgstr "Exibir tabelas abertas"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% connections used"
+#~ msgstr "Conexões"
+
+#, fuzzy
+#~| msgid "Persistent connections"
+#~ msgid "% aborted connections"
+#~ msgstr "Conexões persistentes"
 
 #, fuzzy
 #~| msgid "Usage"
