--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2010-12-02 14:49+0200\n"
 "Last-Translator: Sasa Kostic <sasha.kostic@gmail.com>\n"
 "Language-Team: serbian_latin <sr@latin@li.org>\n"
@@ -1189,7 +1189,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "Keš upita"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 #| msgid "Query cache"
 msgid "Query cache usage"
@@ -11801,8 +11801,8 @@ msgid "Current amount of Questions: %s"
 msgstr "maks. istovremenih veza"
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
-msgid "% slow queries"
+#, fuzzy
+msgid "Percentage of slow queries"
 msgstr "Prikaži kompletne upite"
 
 #: po/advisory_rules.php:16
@@ -11824,7 +11824,7 @@ msgstr ""
 #: po/advisory_rules.php:20
 #, fuzzy
 #| msgid "Flush query cache"
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "Očisti keš upita"
 
 #: po/advisory_rules.php:21
@@ -12005,12 +12005,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "Zauzeće"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -12177,9 +12171,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Allows creating temporary tables."
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr "Dozvoljava kreiranje privremenih tabela.."
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -12202,8 +12196,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
-msgstr ""
+#, fuzzy
+#| msgid "Allows creating temporary tables."
+msgid "Rate of sorts that cause temporary tables"
+msgstr "Dozvoljava kreiranje privremenih tabela.."
 
 #: po/advisory_rules.php:113
 #, php-format
@@ -12235,8 +12231,9 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
-msgstr ""
+#, fuzzy
+msgid "Rate of joins without indexes"
+msgstr "Proveri tabelu"
 
 #: po/advisory_rules.php:121
 #, fuzzy
@@ -12255,7 +12252,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -12278,7 +12275,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -12300,7 +12297,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -12341,11 +12338,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table"
-#| msgid_plural "%s tables"
-msgid "% temp disk tables"
-msgstr "%s tabela"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -12372,8 +12366,11 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table"
+#| msgid_plural "%s tables"
+msgid "Temp disk rate"
+msgstr "%s tabela"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -12414,8 +12411,10 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Max % MyISAM key buffer ever used"
+msgstr "Veličina prihvatnika za sortiranje"
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
 #, php-format
@@ -12435,8 +12434,10 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Percentage of MyISAM key buffer used"
+msgstr "Veličina prihvatnika za sortiranje"
 
 #: po/advisory_rules.php:168
 #, php-format
@@ -12444,7 +12445,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -12464,7 +12465,7 @@ msgstr ""
 #: po/advisory_rules.php:175
 #, fuzzy
 #| msgid "Create table"
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "Napravi tabelu"
 
 #: po/advisory_rules.php:176
@@ -12485,10 +12486,10 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, fuzzy, php-format
-#| msgid "Show open tables"
-msgid "% open files"
-msgstr "Prikaži otvorene tabele"
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of used open files limit"
+msgstr "Format datoteka za uvoz"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -12511,7 +12512,7 @@ msgstr ""
 #: po/advisory_rules.php:185
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "Format datoteka za uvoz"
 
 #: po/advisory_rules.php:186
@@ -12558,7 +12559,7 @@ msgstr ""
 #: po/advisory_rules.php:200
 #, fuzzy
 #| msgid "Key cache"
-msgid "thread cache"
+msgid "Thread cache"
 msgstr "Keš ključeva"
 
 #: po/advisory_rules.php:201
@@ -12576,8 +12577,10 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+#| msgid "Tracking is not active."
+msgid "Thread cache hit rate %"
+msgstr "Praćenje nije aktivno."
 
 #: po/advisory_rules.php:206
 #, fuzzy
@@ -12635,10 +12638,10 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
-#| msgid "Connections"
-msgid "% connections used"
-msgstr "Konekcije"
+#, fuzzy
+#| msgid "max. concurrent connections"
+msgid "Percentage of used connections"
+msgstr "maks. istovremenih veza"
 
 #: po/advisory_rules.php:221
 msgid ""
@@ -12662,7 +12665,7 @@ msgstr ""
 #: po/advisory_rules.php:225
 #, fuzzy
 #| msgid "max. concurrent connections"
-msgid "% aborted connections"
+msgid "Percentage of aborted connections"
 msgstr "maks. istovremenih veza"
 
 #: po/advisory_rules.php:226
@@ -12685,7 +12688,7 @@ msgstr ""
 #: po/advisory_rules.php:230
 #, fuzzy
 #| msgid "max. concurrent connections"
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr "maks. istovremenih veza"
 
 #: po/advisory_rules.php:231
@@ -12699,8 +12702,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of aborted clients"
+msgstr "Format datoteka za uvoz"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12721,7 +12726,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "Format datoteka za uvoz"
 
 #: po/advisory_rules.php:243
@@ -12748,8 +12753,10 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
-msgstr ""
+#, fuzzy
+#| msgid "Buffer pool size"
+msgid "InnoDB log size"
+msgstr "Veličina prihvatnika"
 
 #: po/advisory_rules.php:251
 #, fuzzy
@@ -12860,6 +12867,26 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "Zauzeće"
+
+#, fuzzy
+#~| msgid "Show open tables"
+#~ msgid "% open files"
+#~ msgstr "Prikaži otvorene tabele"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% connections used"
+#~ msgstr "Konekcije"
+
+#, fuzzy
+#~| msgid "max. concurrent connections"
+#~ msgid "% aborted connections"
+#~ msgstr "maks. istovremenih veza"
 
 #, fuzzy
 #~| msgid "Usage"
