--- a/po/ug.po
+++ b/po/ug.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2010-08-26 11:59+0200\n"
 "Last-Translator: <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
@@ -1163,7 +1163,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "ئىزلاش ئاكتىپ ئەمەس"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 #| msgid "Latched pages"
 msgid "Query cache usage"
@@ -11174,8 +11174,7 @@ msgid "Current amount of Questions: %s"
 msgstr ""
 
 #: po/advisory_rules.php:15
-#, php-format
-msgid "% slow queries"
+msgid "Percentage of slow queries"
 msgstr ""
 
 #: po/advisory_rules.php:16
@@ -11197,7 +11196,7 @@ msgstr ""
 #: po/advisory_rules.php:20
 #, fuzzy
 #| msgid "SQL query"
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "SQL سورىقى"
 
 #: po/advisory_rules.php:21
@@ -11376,12 +11375,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Latched pages"
-msgid "memcached usage"
-msgstr "قۇلۇپلانغان بەت"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -11538,8 +11531,7 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, php-format
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -11560,7 +11552,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
+msgid "Rate of sorts that cause temporary tables"
 msgstr ""
 
 #: po/advisory_rules.php:113
@@ -11593,8 +11585,10 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
-msgstr ""
+#, fuzzy
+#| msgid "Tracked tables"
+msgid "Rate of joins without indexes"
+msgstr "ئىزلانغان جەدۋەل"
 
 #: po/advisory_rules.php:121
 #, fuzzy
@@ -11614,7 +11608,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -11637,7 +11631,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -11659,7 +11653,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -11700,11 +11694,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table"
-#| msgid_plural "%s tables"
-msgid "% temp disk tables"
-msgstr "%s جەدۋەل"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -11731,8 +11722,11 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table"
+#| msgid_plural "%s tables"
+msgid "Temp disk rate"
+msgstr "%s جەدۋەل"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -11771,7 +11765,7 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
+msgid "Max % MyISAM key buffer ever used"
 msgstr ""
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
@@ -11792,7 +11786,7 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
+msgid "Percentage of MyISAM key buffer used"
 msgstr ""
 
 #: po/advisory_rules.php:168
@@ -11801,7 +11795,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -11821,7 +11815,7 @@ msgstr ""
 #: po/advisory_rules.php:175
 #, fuzzy
 #| msgid "Create"
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "قۇرۇش"
 
 #: po/advisory_rules.php:176
@@ -11840,9 +11834,10 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, php-format
-msgid "% open files"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of used open files limit"
+msgstr "كىرگۈزگەن ھۆججەت شەكلى"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -11865,7 +11860,7 @@ msgstr ""
 #: po/advisory_rules.php:185
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "كىرگۈزگەن ھۆججەت شەكلى"
 
 #: po/advisory_rules.php:186
@@ -11906,7 +11901,7 @@ msgid "Table lock wait rate: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:200
-msgid "thread cache"
+msgid "Thread cache"
 msgstr ""
 
 #: po/advisory_rules.php:201
@@ -11924,8 +11919,10 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+#| msgid "Tracking is not active."
+msgid "Thread cache hit rate %"
+msgstr "ئىزلاش ئاكتىپ ئەمەس"
 
 #: po/advisory_rules.php:206
 #, fuzzy
@@ -11981,10 +11978,8 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
-#| msgid "PBMS connection failed:"
-msgid "% connections used"
-msgstr "PBMS ئۇلىنالمىدى:"
+msgid "Percentage of used connections"
+msgstr ""
 
 #: po/advisory_rules.php:221
 msgid ""
@@ -12006,8 +12001,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:225
-msgid "% aborted connections"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of aborted connections"
+msgstr "كىرگۈزگەن ھۆججەت شەكلى"
 
 #: po/advisory_rules.php:226
 msgid "Too many connections are aborted."
@@ -12027,8 +12024,10 @@ msgid "%s%% of all connections are aborted. This value should be below 1%%"
 msgstr ""
 
 #: po/advisory_rules.php:230
-msgid "rate of aborted connections"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Rate of aborted connections"
+msgstr "كىرگۈزگەن ھۆججەت شەكلى"
 
 #: po/advisory_rules.php:231
 msgid "Too many connections are aborted"
@@ -12041,8 +12040,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of aborted clients"
+msgstr "كىرگۈزگەن ھۆججەت شەكلى"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12063,7 +12064,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "كىرگۈزگەن ھۆججەت شەكلى"
 
 #: po/advisory_rules.php:243
@@ -12090,7 +12091,7 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
+msgid "InnoDB log size"
 msgstr ""
 
 #: po/advisory_rules.php:251
@@ -12196,6 +12197,16 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Latched pages"
+#~ msgid "memcached usage"
+#~ msgstr "قۇلۇپلانغان بەت"
+
+#, fuzzy
+#~| msgid "PBMS connection failed:"
+#~ msgid "% connections used"
+#~ msgstr "PBMS ئۇلىنالمىدى:"
 
 #, fuzzy
 #~ msgctxt "PDF"
