--- a/po/uk.po
+++ b/po/uk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2011-07-03 18:10+0200\n"
 "Last-Translator:  <vovka2008@gmail.com>\n"
 "Language-Team: ukrainian <uk@li.org>\n"
@@ -1145,7 +1145,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "Трекінг не активний."
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 #| msgid "Space usage"
 msgid "Query cache usage"
@@ -11210,8 +11210,7 @@ msgid "Current amount of Questions: %s"
 msgstr "З'єднань"
 
 #: po/advisory_rules.php:15
-#, php-format
-msgid "% slow queries"
+msgid "Percentage of slow queries"
 msgstr ""
 
 #: po/advisory_rules.php:16
@@ -11233,7 +11232,7 @@ msgstr ""
 #: po/advisory_rules.php:20
 #, fuzzy
 #| msgid "Show query box"
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "Показати блок запиту"
 
 #: po/advisory_rules.php:21
@@ -11412,12 +11411,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "Простір, що використовується"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -11578,9 +11571,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Allows creating temporary tables."
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr "Дозволити створювати тимчасові таблиці."
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -11603,8 +11596,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
-msgstr ""
+#, fuzzy
+#| msgid "Allows creating temporary tables."
+msgid "Rate of sorts that cause temporary tables"
+msgstr "Дозволити створювати тимчасові таблиці."
 
 #: po/advisory_rules.php:113
 #, php-format
@@ -11636,7 +11631,7 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
+msgid "Rate of joins without indexes"
 msgstr ""
 
 #: po/advisory_rules.php:121
@@ -11655,7 +11650,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -11678,7 +11673,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -11700,7 +11695,7 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
+msgid "Rate of reading next table row"
 msgstr ""
 
 #: po/advisory_rules.php:136
@@ -11741,11 +11736,8 @@ msgid "Current values are tmp_table_size: %s, max_heap_table_size: %s"
 msgstr ""
 
 #: po/advisory_rules.php:145
-#, fuzzy
-#| msgid "%s table"
-#| msgid_plural "%s tables"
-msgid "% temp disk tables"
-msgstr "%s таблиця"
+msgid "Percentage of temp tables on disk"
+msgstr ""
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -11772,8 +11764,11 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table"
+#| msgid_plural "%s tables"
+msgid "Temp disk rate"
+msgstr "%s таблиця"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -11812,7 +11807,7 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
+msgid "Max % MyISAM key buffer ever used"
 msgstr ""
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
@@ -11833,7 +11828,7 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
+msgid "Percentage of MyISAM key buffer used"
 msgstr ""
 
 #: po/advisory_rules.php:168
@@ -11842,7 +11837,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -11862,7 +11857,7 @@ msgstr ""
 #: po/advisory_rules.php:175
 #, fuzzy
 #| msgid "Create a page"
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "Створити нову сторінку"
 
 #: po/advisory_rules.php:176
@@ -11881,9 +11876,10 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, php-format
-msgid "% open files"
-msgstr ""
+#, fuzzy
+#| msgid "Character set of the file:"
+msgid "Percentage of used open files limit"
+msgstr "Кодування файлу:"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -11906,7 +11902,7 @@ msgstr ""
 #: po/advisory_rules.php:185
 #, fuzzy
 #| msgid "Character set of the file:"
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "Кодування файлу:"
 
 #: po/advisory_rules.php:186
@@ -11947,7 +11943,7 @@ msgid "Table lock wait rate: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:200
-msgid "thread cache"
+msgid "Thread cache"
 msgstr ""
 
 #: po/advisory_rules.php:201
@@ -11965,8 +11961,10 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+#| msgid "Tracking is not active."
+msgid "Thread cache hit rate %"
+msgstr "Трекінг не активний."
 
 #: po/advisory_rules.php:206
 #, fuzzy
@@ -12022,9 +12020,9 @@ msgid "slow_launch_time is set to %s"
 msgstr ""
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Connections"
-msgid "% connections used"
+msgid "Percentage of used connections"
 msgstr "З'єднань"
 
 #: po/advisory_rules.php:221
@@ -12049,7 +12047,7 @@ msgstr ""
 #: po/advisory_rules.php:225
 #, fuzzy
 #| msgid "Connections"
-msgid "% aborted connections"
+msgid "Percentage of aborted connections"
 msgstr "З'єднань"
 
 #: po/advisory_rules.php:226
@@ -12072,7 +12070,7 @@ msgstr ""
 #: po/advisory_rules.php:230
 #, fuzzy
 #| msgid "Connections"
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr "З'єднань"
 
 #: po/advisory_rules.php:231
@@ -12086,8 +12084,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Table of contents"
+msgid "Percentage of aborted clients"
+msgstr "Зміст"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12108,7 +12108,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Table of contents"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "Зміст"
 
 #: po/advisory_rules.php:243
@@ -12133,7 +12133,7 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
+msgid "InnoDB log size"
 msgstr ""
 
 #: po/advisory_rules.php:251
@@ -12239,6 +12239,21 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "Простір, що використовується"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% connections used"
+#~ msgstr "З'єднань"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% aborted connections"
+#~ msgstr "З'єднань"
 
 #, fuzzy
 #~| msgid "Usage"
