--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2011-08-12 12:22+0200\n"
+"POT-Creation-Date: 2011-08-12 12:32+0200\n"
 "PO-Revision-Date: 2011-08-11 04:40+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
@@ -1121,7 +1121,7 @@ msgstr ""
 msgid "Query cache efficiency"
 msgstr "查询缓存"
 
-#: js/messages.php:97
+#: js/messages.php:97 po/advisory_rules.php:70
 #, fuzzy
 #| msgid "Query cache"
 msgid "Query cache usage"
@@ -11073,9 +11073,9 @@ msgid "Current amount of Questions: %s"
 msgstr "当前连接"
 
 #: po/advisory_rules.php:15
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Show SQL queries"
-msgid "% slow queries"
+msgid "Percentage of slow queries"
 msgstr "显示 SQL 查询"
 
 #: po/advisory_rules.php:16
@@ -11097,7 +11097,7 @@ msgstr ""
 #: po/advisory_rules.php:20
 #, fuzzy
 #| msgid "Flush query cache"
-msgid "slow query rate"
+msgid "Slow query rate"
 msgstr "强制更新查询缓存"
 
 #: po/advisory_rules.php:21
@@ -11285,12 +11285,6 @@ msgstr ""
 msgid "query_cache_size is set to 0 or query_cache_type is set to 'OFF'"
 msgstr ""
 
-#: po/advisory_rules.php:70
-#, fuzzy
-#| msgid "Space usage"
-msgid "memcached usage"
-msgstr "已用空间"
-
 #: po/advisory_rules.php:71
 msgid "Suboptimal caching method."
 msgstr ""
@@ -11457,9 +11451,9 @@ msgid "query_cache_limit is set to 1 MiB"
 msgstr ""
 
 #: po/advisory_rules.php:105
-#, fuzzy, php-format
+#, fuzzy
 #| msgid "Allows creating temporary tables."
-msgid "% sorts that cause temporary tales"
+msgid "Percentage of sorts that cause temporary tables"
 msgstr "允许创建临时表。"
 
 #: po/advisory_rules.php:106 po/advisory_rules.php:111
@@ -11482,8 +11476,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:110
-msgid "rate of sorts that cause temporary tables"
-msgstr ""
+#, fuzzy
+#| msgid "Allows creating temporary tables."
+msgid "Rate of sorts that cause temporary tables"
+msgstr "允许创建临时表。"
 
 #: po/advisory_rules.php:113
 #, php-format
@@ -11515,8 +11511,10 @@ msgid "Sorted rows average: %s"
 msgstr ""
 
 #: po/advisory_rules.php:120
-msgid "rate of joins without indexes"
-msgstr ""
+#, fuzzy
+#| msgid "There are no routines to display."
+msgid "Rate of joins without indexes"
+msgstr "没有程序。"
 
 #: po/advisory_rules.php:121
 #, fuzzy
@@ -11536,7 +11534,7 @@ msgid "Table joins average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:125
-msgid "rate of reading first index entry"
+msgid "Rate of reading first index entry"
 msgstr ""
 
 #: po/advisory_rules.php:126
@@ -11559,7 +11557,7 @@ msgid "Index scans average: %s, this value should be less than 1 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:130
-msgid "rate of reading fixed position"
+msgid "Rate of reading fixed position"
 msgstr ""
 
 #: po/advisory_rules.php:131
@@ -11581,8 +11579,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:135
-msgid "rate of reading next table row"
-msgstr ""
+#, fuzzy
+#| msgid "Where to show the table row links"
+msgid "Rate of reading next table row"
+msgstr "表中每行数据操作链接位置"
 
 #: po/advisory_rules.php:136
 #, fuzzy
@@ -11625,10 +11625,9 @@ msgstr ""
 
 #: po/advisory_rules.php:145
 #, fuzzy
-#| msgid "%s table"
-#| msgid_plural "%s tables"
-msgid "% temp disk tables"
-msgstr "%s 张表"
+#| msgid "Where to show the table row links"
+msgid "Percentage of temp tables on disk"
+msgstr "表中每行数据操作链接位置"
 
 #: po/advisory_rules.php:146 po/advisory_rules.php:151
 msgid ""
@@ -11655,8 +11654,11 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:150
-msgid "temp disk rate"
-msgstr ""
+#, fuzzy
+#| msgid "%s table"
+#| msgid_plural "%s tables"
+msgid "Temp disk rate"
+msgstr "%s 张表"
 
 #: po/advisory_rules.php:152
 msgid ""
@@ -11697,8 +11699,10 @@ msgid "key_buffer_size is 0"
 msgstr ""
 
 #: po/advisory_rules.php:160
-msgid "max % MyISAM key buffer ever used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Max % MyISAM key buffer ever used"
+msgstr "排序缓存大小"
 
 #: po/advisory_rules.php:161 po/advisory_rules.php:166
 #, php-format
@@ -11718,8 +11722,10 @@ msgid "max %% MyISAM key buffer ever used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:165
-msgid "% MyISAM key buffer used"
-msgstr ""
+#, fuzzy
+#| msgid "Sort buffer size"
+msgid "Percentage of MyISAM key buffer used"
+msgstr "排序缓存大小"
 
 #: po/advisory_rules.php:168
 #, php-format
@@ -11727,7 +11733,7 @@ msgid "%% MyISAM key buffer used: %s, this value should be above 95%%"
 msgstr ""
 
 #: po/advisory_rules.php:170
-msgid "% index reads from memory"
+msgid "Percentage of index reads from memory"
 msgstr ""
 
 #: po/advisory_rules.php:171
@@ -11747,7 +11753,7 @@ msgstr ""
 #: po/advisory_rules.php:175
 #, fuzzy
 #| msgid "Create table"
-msgid "rate of table open"
+msgid "Rate of table open"
 msgstr "新建数据表"
 
 #: po/advisory_rules.php:176
@@ -11768,10 +11774,10 @@ msgid "Opened table rate: %s, this value should be less than 10 per hour"
 msgstr ""
 
 #: po/advisory_rules.php:180
-#, fuzzy, php-format
-#| msgid "Show open tables"
-msgid "% open files"
-msgstr "显示打开的表"
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of used open files limit"
+msgstr "导入文件的格式"
 
 #: po/advisory_rules.php:181
 msgid ""
@@ -11794,7 +11800,7 @@ msgstr ""
 #: po/advisory_rules.php:185
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of open files"
+msgid "Rate of open files"
 msgstr "导入文件的格式"
 
 #: po/advisory_rules.php:186
@@ -11841,7 +11847,7 @@ msgstr ""
 #: po/advisory_rules.php:200
 #, fuzzy
 #| msgid "Key cache"
-msgid "thread cache"
+msgid "Thread cache"
 msgstr "键缓存"
 
 #: po/advisory_rules.php:201
@@ -11859,8 +11865,10 @@ msgid "The thread cache is set to 0"
 msgstr ""
 
 #: po/advisory_rules.php:205
-msgid "thread cache hit rate %"
-msgstr ""
+#, fuzzy
+#| msgid "Tracking is not active."
+msgid "Thread cache hit rate %"
+msgstr "追踪已禁用。"
 
 #: po/advisory_rules.php:206
 #, fuzzy
@@ -11919,10 +11927,10 @@ msgid "slow_launch_time is set to %s"
 msgstr "long_query_time 已设为 %d 秒。"
 
 #: po/advisory_rules.php:220
-#, fuzzy, php-format
-#| msgid "Connections"
-msgid "% connections used"
-msgstr "连接"
+#, fuzzy
+#| msgid "Persistent connections"
+msgid "Percentage of used connections"
+msgstr "持久连接"
 
 #: po/advisory_rules.php:221
 msgid ""
@@ -11945,9 +11953,9 @@ msgstr ""
 
 #: po/advisory_rules.php:225
 #, fuzzy
-#| msgid "Compress connection"
-msgid "% aborted connections"
-msgstr "压缩连接"
+#| msgid "Persistent connections"
+msgid "Percentage of aborted connections"
+msgstr "持久连接"
 
 #: po/advisory_rules.php:226
 msgid "Too many connections are aborted."
@@ -11969,7 +11977,7 @@ msgstr ""
 #: po/advisory_rules.php:230
 #, fuzzy
 #| msgid "Persistent connections"
-msgid "rate of aborted connections"
+msgid "Rate of aborted connections"
 msgstr "持久连接"
 
 #: po/advisory_rules.php:231
@@ -11983,8 +11991,10 @@ msgid ""
 msgstr ""
 
 #: po/advisory_rules.php:235
-msgid "% aborted clients"
-msgstr ""
+#, fuzzy
+#| msgid "Format of imported file"
+msgid "Percentage of aborted clients"
+msgstr "导入文件的格式"
 
 #: po/advisory_rules.php:236 po/advisory_rules.php:241
 msgid "Too many clients are aborted."
@@ -12005,7 +12015,7 @@ msgstr ""
 #: po/advisory_rules.php:240
 #, fuzzy
 #| msgid "Format of imported file"
-msgid "rate of aborted clients"
+msgid "Rate of aborted clients"
 msgstr "导入文件的格式"
 
 #: po/advisory_rules.php:243
@@ -12032,8 +12042,10 @@ msgid "have_innodb is set to 'value'"
 msgstr ""
 
 #: po/advisory_rules.php:250
-msgid "% InnoDB log size"
-msgstr ""
+#, fuzzy
+#| msgid "Buffer pool size"
+msgid "InnoDB log size"
+msgstr "缓冲池大小"
 
 #: po/advisory_rules.php:251
 #, fuzzy
@@ -12144,6 +12156,26 @@ msgstr ""
 #: po/advisory_rules.php:268
 msgid "concurrent_insert is set to 0"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Space usage"
+#~ msgid "memcached usage"
+#~ msgstr "已用空间"
+
+#, fuzzy
+#~| msgid "Show open tables"
+#~ msgid "% open files"
+#~ msgstr "显示打开的表"
+
+#, fuzzy
+#~| msgid "Connections"
+#~ msgid "% connections used"
+#~ msgstr "连接"
+
+#, fuzzy
+#~| msgid "Compress connection"
+#~ msgid "% aborted connections"
+#~ msgstr "压缩连接"
 
 #~ msgid "CPU Usage"
 #~ msgstr "CPU 使用"
